# quant-trading-bot

./: .gitignore  BUILD.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  autotrader.py  check_activity.py  check_bot_status.py  check_order.py  config.example.json  config_onetrading_backup.json  flet_app.py  freqtrade.sh  main.py  pubspec.yaml  sell_all_usdc_to_eur.py  swap_eur_to_usdc.py  tradesv3.dryrun.sqlite  tradesv3.sqlite  tradesv3.sqlite-shm  tradesv3.sqlite-wal
.github/workflows/: build-apk.yml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
data/: BONK_EUR_1m.json  BTC_EUR_1m.json  DOGE_EUR_1m.json  ETH_EUR_1m.json  FLOKI_EUR_1m.json  PEPE_EUR_1m.json  SHIB_EUR_1m.json  SOL_EUR_1m.json  WIF_EUR_1m.json
docs/: build_apk.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
legacy_python_bot/: autotrader.py  backtester.py  dashboard.py  dex_radar.py  download_history.py  main.py
legacy_python_bot/docs/: QUICK_START.md  build_apk.md
legacy_python_bot/static/: style.css
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
matrix_quant_app/: README.md  pubspec.yaml
matrix_quant_app/integration_test/: simple_test.dart
matrix_quant_app/lib/: main.dart
matrix_quant_app/rust/: Cargo.toml
matrix_quant_app/rust/src/config/: mod.rs
matrix_quant_app/rust/src/trading/: engine.rs
matrix_quant_app/rust_builder/: pubspec.yaml
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: frb_generated.rs  lib.rs  main.rs
rust/src/api/: mod.rs  rest_client.rs  simple.rs
rust/src/config/: mod.rs
rust/src/trading/: engine.rs  mod.rs
rust_builder/android/: build.gradle  settings.gradle
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_matrix_quant_app.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: run_autotrader.sh
templates/: index.html
test/: widget_test.dart
user_data/: llm_advisor.py
utils/: check_balance.py  check_bp_support.py  check_kraken_pairs.py  check_markets.py  check_wallet_details.py  swap_chf_to_eur.py  test_ohlcv.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+23 files in other folders)
