[package]
name = "matrix-quant-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Crypto and Hashing (for Kraken API Signatures)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Flutter bridge
flutter_rust_bridge = "2.11.1"

# Thread-safe lazy statics
once_cell = "1.19"

# Android logging (optional, only for Android builds)
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[lib]
name = "matrix_quant_core"
crate-type = ["cdylib", "staticlib", "lib"]
