[package]
name = "rust_lib_matrix_quant_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
matrix-quant-core = { path = "../../../matrix-quant-core" }
